--- a/agencia-angular/src/app/pages/contas/contas.component.html
+++ b/agencia-angular/src/app/pages/contas/contas.component.html
@@ -13,8 +13,8 @@
         <th scope="row">{{ conta.agencia }}</th>
         <td>{{ conta.numero }}</td>
         <td>{{ conta.saldo }}</td>
-        <td>{{ conta.nomeTitular }}</td>
-        <td>{{ conta.email }}</td>
+        <td>{{ conta.cliente.nome }}</td>
+        <td>{{ conta.cliente.email }}</td>
       </tr>
 
     </tbody>
